--- a/assets/app.css
+++ b/assets/app.css
@@ -613,76 +613,84 @@ video {
   inset: 0px;
 }
 
-.tw-bottom-0 {
-  bottom: 0px;
-}
-
-.-tw-left-full {
-  left: -100%;
-}
-
-.-tw-right-full {
-  right: -100%;
-}
-
-.tw-top-1\/2 {
-  top: 50%;
-}
-
-.tw-top-1 {
-  top: 0.25rem;
-}
-
-.tw-right-0 {
-  right: 0px;
-}
-
-.tw-left-4 {
-  left: 1rem;
-}
-
-.tw-top-4 {
-  top: 1rem;
-}
-
-.tw-left-0 {
-  left: 0px;
-}
-
-.tw-top-0 {
-  top: 0px;
-}
-
 .-tw-left-4 {
   left: -1rem;
-}
-
-.-tw-right-4 {
-  right: -1rem;
 }
 
 .-tw-left-8 {
   left: -2rem;
 }
 
+.-tw-left-full {
+  left: -100%;
+}
+
+.-tw-right-4 {
+  right: -1rem;
+}
+
 .-tw-right-8 {
   right: -2rem;
+}
+
+.-tw-right-full {
+  right: -100%;
+}
+
+.tw-bottom-0 {
+  bottom: 0px;
 }
 
 .tw-bottom-4 {
   bottom: 1rem;
 }
 
-.tw-right-4 {
-  right: 1rem;
-}
-
 .tw-bottom-6 {
   bottom: 1.5rem;
 }
 
+.tw-left-0 {
+  left: 0px;
+}
+
+.tw-left-4 {
+  left: 1rem;
+}
+
+.tw-right-0 {
+  right: 0px;
+}
+
+.tw-right-4 {
+  right: 1rem;
+}
+
 .tw-right-6 {
   right: 1.5rem;
+}
+
+.tw-top-0 {
+  top: 0px;
+}
+
+.tw-top-1 {
+  top: 0.25rem;
+}
+
+.tw-top-1\/2 {
+  top: 50%;
+}
+
+.tw-top-4 {
+  top: 1rem;
+}
+
+.-tw-z-10 {
+  z-index: -10;
+}
+
+.tw--z-10 {
+  z-index: -10;
 }
 
 .tw-z-10 {
@@ -719,20 +727,20 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.tw-ml-auto {
-  margin-left: auto;
+.tw-mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .tw-ml-4 {
   margin-left: 1rem;
 }
 
-.tw-mr-4 {
-  margin-right: 1rem;
+.tw-ml-auto {
+  margin-left: auto;
 }
 
-.tw-mb-6 {
-  margin-bottom: 1.5rem;
+.tw-mr-4 {
+  margin-right: 1rem;
 }
 
 .tw-block {
@@ -759,12 +767,12 @@ video {
   aspect-ratio: 3/2;
 }
 
-.tw-aspect-square {
-  aspect-ratio: 1 / 1;
-}
-
 .tw-aspect-auto {
   aspect-ratio: auto;
+}
+
+.tw-aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .tw-aspect-video {
@@ -776,38 +784,14 @@ video {
   height: 4rem;
 }
 
-.tw-size-8 {
-  width: 2rem;
-  height: 2rem;
-}
-
 .tw-size-20 {
   width: 5rem;
   height: 5rem;
 }
 
-.tw-h-full {
-  height: 100%;
-}
-
-.tw-h-16 {
-  height: 4rem;
-}
-
-.tw-h-64 {
-  height: 16rem;
-}
-
-.tw-h-\[600px\] {
-  height: 600px;
-}
-
-.tw-h-\[400px\] {
-  height: 400px;
-}
-
-.tw-h-1\/5 {
-  height: 20%;
+.tw-size-8 {
+  width: 2rem;
+  height: 2rem;
 }
 
 .tw-h-1 {
@@ -818,8 +802,28 @@ video {
   height: 50%;
 }
 
-.tw-max-h-\[600px\] {
-  max-height: 600px;
+.tw-h-16 {
+  height: 4rem;
+}
+
+.tw-h-64 {
+  height: 16rem;
+}
+
+.tw-h-full {
+  height: 100%;
+}
+
+.tw-w-1 {
+  width: 0.25rem;
+}
+
+.tw-w-16 {
+  width: 4rem;
+}
+
+.tw-w-4 {
+  width: 1rem;
 }
 
 .tw-w-auto {
@@ -830,44 +834,10 @@ video {
   width: 100%;
 }
 
-.tw-w-1\/5 {
-  width: 20%;
-}
-
-.tw-w-4\/5 {
-  width: 80%;
-}
-
-.tw-w-1 {
-  width: 0.25rem;
-}
-
-.tw-w-4 {
-  width: 1rem;
-}
-
-.tw-w-\[100px\] {
-  width: 100px;
-}
-
-.tw-w-\[800px\] {
-  width: 800px;
-}
-
-.tw-w-\[600px\] {
-  width: 600px;
-}
-
-.tw-w-16 {
-  width: 4rem;
-}
-
-.tw-max-w-\[50vw\] {
-  max-width: 50vw;
-}
-
-.tw-max-w-\[960px\] {
-  max-width: 960px;
+.tw-max-w-fit {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 .tw-shrink-0 {
@@ -888,10 +858,28 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.tw-translate-y-\[2px\] {
+  --tw-translate-y: 2px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .tw-scale-105 {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-animate-pulse-fast {
+  -webkit-animation: pulse-fast 0.9s infinite;
+          animation: pulse-fast 0.9s infinite;
+}
+
+.tw-cursor-pointer {
+  cursor: pointer;
+}
+
+.tw-grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .tw-grid-cols-2 {
@@ -900,10 +888,6 @@ video {
 
 .tw-grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.tw-grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .tw-grid-rows-3 {
@@ -942,6 +926,10 @@ video {
   justify-content: space-between;
 }
 
+.tw-gap-1 {
+  gap: 0.25rem;
+}
+
 .tw-gap-2 {
   gap: 0.5rem;
 }
@@ -956,10 +944,6 @@ video {
 
 .tw-gap-8 {
   gap: 2rem;
-}
-
-.tw-gap-1 {
-  gap: 0.25rem;
 }
 
 .tw-gap-x-2 {
@@ -987,20 +971,20 @@ video {
   overflow: hidden;
 }
 
-.tw-rounded-md {
-  border-radius: 0.375rem;
-}
-
-.tw-rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .tw-rounded {
   border-radius: 0.25rem;
 }
 
 .tw-rounded-full {
   border-radius: 9999px;
+}
+
+.tw-rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.tw-rounded-md {
+  border-radius: 0.375rem;
 }
 
 .tw-border {
@@ -1022,14 +1006,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.tw-border-white\/75 {
-  border-color: rgb(255 255 255 / 0.75);
-}
-
-.tw-border-black\/75 {
-  border-color: rgb(0 0 0 / 0.75);
-}
-
 .\!tw-bg-red-400 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity)) !important;
@@ -1040,9 +1016,38 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.tw-bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
+}
+
+.tw-bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.tw-bg-neutral-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
+}
+
+.tw-bg-neutral-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
+}
+
+.tw-bg-neutral-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
 .tw-bg-orange-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 247 237 / var(--tw-bg-opacity));
+}
+
+.tw-bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .tw-bg-red-400 {
@@ -1065,61 +1070,28 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.tw-bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.tw-bg-white\/80 {
-  background-color: rgb(255 255 255 / 0.8);
-}
-
-.tw-bg-white\/40 {
-  background-color: rgb(255 255 255 / 0.4);
-}
-
-.tw-bg-black\/40 {
-  background-color: rgb(0 0 0 / 0.4);
-}
-
-.tw-bg-neutral-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
-}
-
-.tw-bg-neutral-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
-}
-
-.tw-bg-neutral-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
-}
-
-.tw-bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+.tw-bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .tw-bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
-.tw-bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.tw-from-black\/50 {
-  --tw-gradient-from: rgb(0 0 0 / 0.5) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .tw-from-black {
   --tw-gradient-from: #000 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.tw-from-orange-400 {
+  --tw-gradient-from: #fb923c var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(251 146 60 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.tw-to-orange-500 {
+  --tw-gradient-to: #f97316 var(--tw-gradient-to-position);
 }
 
 .tw-object-contain {
@@ -1132,31 +1104,26 @@ video {
      object-fit: cover;
 }
 
-.tw-p-6 {
-  padding: 1.5rem;
-}
-
 .tw-p-4 {
   padding: 1rem;
+}
+
+.tw-p-6 {
+  padding: 1.5rem;
 }
 
 .tw-p-8 {
   padding: 2rem;
 }
 
-.tw-px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.tw-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .tw-px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.tw-px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .tw-px-36 {
@@ -1169,20 +1136,25 @@ video {
   padding-right: 1.5rem;
 }
 
-.tw-pb-10 {
-  padding-bottom: 2.5rem;
+.tw-py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.tw-pt-0 {
-  padding-top: 0px;
+.tw-pb-0 {
+  padding-bottom: 0px;
+}
+
+.tw-pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .tw-pb-16 {
   padding-bottom: 4rem;
 }
 
-.tw-pb-0 {
-  padding-bottom: 0px;
+.tw-pt-0 {
+  padding-top: 0px;
 }
 
 .tw-text-center {
@@ -1199,23 +1171,19 @@ video {
   line-height: 2.25rem;
 }
 
-.tw-text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .tw-text-5xl {
   font-size: 3rem;
   line-height: 1;
 }
 
+.tw-text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .tw-text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.tw-font-medium {
-  font-weight: 500;
 }
 
 .tw-font-bold {
@@ -1226,6 +1194,14 @@ video {
   font-weight: 300;
 }
 
+.tw-font-medium {
+  font-weight: 500;
+}
+
+.tw-font-semibold {
+  font-weight: 600;
+}
+
 .tw-uppercase {
   text-transform: uppercase;
 }
@@ -1233,6 +1209,21 @@ video {
 .tw-ordinal {
   --tw-ordinal: ordinal;
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
+}
+
+.\!tw-text-black {
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+}
+
+.tw-text-amber-100 {
+  --tw-text-opacity: 1;
+  color: rgb(254 243 199 / var(--tw-text-opacity));
+}
+
+.tw-text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .tw-text-orange-800 {
@@ -1250,16 +1241,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.tw-text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.\!tw-text-black {
-  --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
-}
-
 .tw-opacity-0 {
   opacity: 0;
 }
@@ -1274,10 +1255,28 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
+.tw-shadow-orange-glow-light {
+  --tw-shadow: 0 0 30px 0px rgba(255, 155, 0, 0.6),0 0 60px 30px rgba(255, 155, 0, 0.3),0 0 120px 60px rgba(255, 155, 0, 0.1), 0 0 200px 100px rgba(255, 155, 0, 0.06);
+  --tw-shadow-colored: 0 0 30px 0px var(--tw-shadow-color), 0 0 60px 30px var(--tw-shadow-color), 0 0 120px 60px var(--tw-shadow-color), 0 0 200px 100px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tw-shadow-orange-glow-dark {
+  --tw-shadow: 0 0 30px 0px rgba(255, 155, 0, 0.3),0 0 60px 30px rgba(255, 155, 0, 0.15),0 0 120px 60px rgba(255, 155, 0, 0.05), 0 0 200px 100px rgba(255, 155, 0, 0.03);
+  --tw-shadow-colored: 0 0 30px 0px var(--tw-shadow-color), 0 0 60px 30px var(--tw-shadow-color), 0 0 120px 60px var(--tw-shadow-color), 0 0 200px 100px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .tw-backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.tw-transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .tw-transition-opacity {
@@ -1286,10 +1285,8 @@ video {
   transition-duration: 150ms;
 }
 
-.tw-transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.tw-duration-200 {
+  transition-duration: 200ms;
 }
 
 .tw-duration-300 {
@@ -1300,14 +1297,13 @@ video {
   transition-duration: 500ms;
 }
 
-.hover\:tw-scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:tw-opacity-0:hover {
   opacity: 0;
+}
+
+.active\:tw-translate-y-\[2px\]:active {
+  --tw-translate-y: 2px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .active\:tw-bg-neutral-900:active {
@@ -1321,23 +1317,7 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.tw-group:hover .group-hover\:tw-opacity-100 {
-  opacity: 1;
-}
-
 @media (min-width: 750px) {
-  .md\:tw-col-span-10 {
-    grid-column: span 10 / span 10;
-  }
-
-  .md\:tw-col-span-2 {
-    grid-column: span 2 / span 2;
-  }
-
-  .md\:tw-block {
-    display: block;
-  }
-
   .md\:tw-flex {
     display: flex;
   }
@@ -1358,11 +1338,11 @@ video {
     width: auto;
   }
 
-  .md\:tw-max-w-\[75vw\] {
-    max-width: 75vw;
-  }
-
   .md\:tw-gap-2 {
     gap: 0.5rem;
+  }
+
+  .disabled\:md\:tw-hidden:disabled {
+    display: none;
   }
 }
